Fix padding so focus ring isn't cut off

--- a/components/auth/LoginModal/index.module.scss
+++ b/components/auth/LoginModal/index.module.scss
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: column;
   gap: $unit;
-  padding: 0 $unit-4x;
+  padding: $unit-fourth $unit-4x;
 }
