--- a/components/auth/SignupModal/index.module.scss
+++ b/components/auth/SignupModal/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: $unit;
-  padding: 0 $unit-4x;
+  padding: $unit-fourth $unit-4x;
 }
 
 .terms {
